<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/howtoTv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cookierunfont_blod"
        android:text="@string/howtoTv1"
        android:textColor="#815854"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/howtoTv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/suseongdotum"
        android:text="@string/howtoTv2"
        android:textColor="#121212"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/howtoTv1"
        app:layout_constraintTop_toBottomOf="@+id/howtoTv1" />

    <TextView
        android:id="@+id/howtoTv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/suseongdotum"
        android:text="@string/howtoTv3"
        android:textColor="#121212"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/howtoTv2"
        app:layout_constraintTop_toBottomOf="@+id/howtoTv2" />

    <TextView
        android:id="@+id/howtoTv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/suseongdotum"
        android:textColor="#868e96"
        android:text="@string/howtoTv4"
        app:layout_constraintStart_toStartOf="@+id/howtoTv3"
        app:layout_constraintTop_toBottomOf="@+id/howtoTv3" />

    <Button
        android:id="@+id/howtoCloseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_howtoplay"
        android:fontFamily="@font/cookierunfont_blod"
        android:padding="15dp"
        android:text="@string/howtoBtn"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howtoTv4" />
</androidx.constraintlayout.widget.ConstraintLayout>